--- a/bulb-on-off/index.html
+++ b/bulb-on-off/index.html
@@ -15,7 +15,7 @@
 
   <nav class="navbar navbar-expand-lg text-center mb-4 py-3 bg-body-secondary">
     <div class="container ">
-      <a class="navbar-brand mx-sm-5 fw-bold" href="./../index.html" style="margin-right: 50px; color: blueviolet;">Home</a>
+      <a class="navbar-brand mx-sm-5 fw-bold" href="./../index.html" style="margin-right: 50px; color: blueviolet;">Mini Utility Project</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
         <ul class="navbar-nav">
           <li class="nav-item me-xxl-5">
             <a class="nav-link active fw-bold" aria-current="page" href="./../score-keeper/index.html"
-              style="margin: 0 50px; color: blueviolet; ">Score Keeper</a>
+              style="margin: 0 25px; color: blueviolet; ">Score Keeper</a>
 
           </li>
           <li class="nav-item me-xxl-5">
@@ -152,36 +152,24 @@
   </script>
 
   <!-- footer -->
-  <footer class="button-color mt-5">
-    <div class="container text-light col-md-6">
-      <h1 class="text-center">Welcome To Our JavaScript Projects...!</h1><br />
-      <div class="row">
-
-        <div class="  col-md-8 ">
-
-          <a href="./index.html" style="text-decoration: none; display:block; color: white;">Home</a>
-          <a href="./dice-roller/index.html" style="text-decoration: none; display:block; color: white;">Dice
-            roller</a>
-          <a href="./bulb-on-off/index.html" style="text-decoration: none; display:block; color: white;">Bulb
-            Toggler</a>
-          <a href="./bmi/index.html" style="text-decoration: none; display:block; color: white;">BMI Calculator</a>
-          <a href="./product-galary/index.html" style="text-decoration: none; display:block; color: white;">Product
-            Galary</a>
-          <a href="./score-keeper/index.html" style="text-decoration: none; display:block; color: white;">Score
-            keeper</a>
-        </div>
-
-        <div class=" col-md-4">
-          <h5 class=" fs-4">Contact Us</h5>
-          <pre><a href="tel:+919373814613" style="text-decoration: none; display:block; color: white; "><i class="fa-solid fa-phone-volume fs-2"></i> +918262945593</a></pre>
-          <a href="mailto:prajaktamhase8@gmail.com" style="text-decoration: none; display:block; color: white;"><i
-              class="fa-solid fa-envelope "></i>
-            prajaktamhase8@gmail.com</a>
-          <br>
-
-        </div>
-        <div>
-  </footer>
+  <footer class="button-color mt-5"   style="background-color: #21D4FD;
+  background-image: linear-gradient(19deg, #5f5af8 0%, #B721FF 100%)";
+  ;
+  >
+    <div>
+      <h1 class="text-center pt-4 text-light">Thank You For Visiting JavaScript Projects...!</h1><br/>
+      <div class="text-light footer1 ">
+        
+        <a href="./../score-keeper/index.html" class="text-decoration-none" > <li class="link ms-4 fs-4 text-light">Score Keeper</li></a>
+      <a href="./../diceroller/index.html" target="_blank" class="text-decoration-none" >  <li class="link ms-4 fs-4 text-light ">Dice Roller</li></a>
+      <a href="./index.html" target="_blank " class="text-decoration-none">  <li class="link ms-4 fs-4 text-light">BMI</li></a>
+        <a href="./../bulb-on-off/index.html" class="text-decoration-none" > <li class="link ms-4 fs-4 text-light">Bulb On-Off</li></a>
+      <a href="./../product-galary/index.html" class="text-decoration-none" >   <li class="link ms-4 fs-4 text-light text-decoration-none">Product Gallary</li></a><br>
+          <br><br><br>
+     
+      </div>
+       </div>
+      </footer>
 
 
 
