media query added to index page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
           </li>
           <li class="nav-item me-xxl-5">
-            <a class="nav-link active fw-bold" aria-current="page" href="./dice-roller/index.html"
+            <a class="nav-link active fw-bold" aria-current="page" href="./diceroller/index.html"
               style="margin-right: 50px; color: white ">Dice Roller</a>
 
           </li>
@@ -72,7 +72,7 @@
       </div>
     </div>
   </nav>
-<h1 class="font-size text-center">Welcome To Our Mini <br />JavaScript Projects....!</h1>
+<h1 class="font-size text-center heading1">Welcome To Our Mini <br />JavaScript Projects....!</h1>
     <div class="container">
     <div class="row">
       <div class="col-md-4">
